Ajustes de análisis del objetivo 3
Proceso de actualización del objetivo 3

--- a/05_analisis_objetivi_3.ipynb
+++ b/05_analisis_objetivi_3.ipynb
@@ -598,7 +598,10 @@
    "id": "cb965f82",
    "metadata": {},
    "source": [
-    "### conclusiones"
+    "De acuerdo al Modelo Predictivo Prophet, se establecen las siguientes observaciones: \n",
+    "1. La aprobación se mantiene fuerte, lo cual es positivo.\n",
+    "2. La repitencia y la reprobación deben monitorearse: una sube y la otra baja levemente, pero ambas pueden afectar la eficiencia escolar.\n",
+    "3. La cobertura neta y la deserción tienen un comportamiento incierto; aunque bajan, los intervalos son tan amplios que dificultan conclusiones firmes."
    ]
   },
   {
@@ -697,6 +700,22 @@
     "        print(forecast_series.tail(3))\n",
     "    else:\n",
     "        print(\"Pronóstico no disponible.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7b3b4d",
+   "metadata": {},
+   "source": [
+    "El panorama esperado, según las proyecciones de los modelos **ARIMA**, es un escenario donde:\n",
+    "\n",
+    "El principal desafío educativo en Colombia será la *Repitencia*, que se proyecta a empeorar significativamente si no se implementan medidas correctivas urgentes. Esto implicaría una mayor ineficiencia en el sistema educativo y un aumento potencial en el riesgo de deserción futura.\n",
+    "\n",
+    "La *Cobertura Neta y la Aprobación* no lograrán recuperar sus niveles prepandemia, consolidándose en rangos más bajos. Esto sugiere que los desafíos en el acceso y la calidad del aprendizaje que se agudizaron con la pandemia persisten.\n",
+    "\n",
+    "*La Deserción y la Reprobación* se estabilizarán, pero en niveles que todavía representan un problema, sin alcanzar los indicadores más favorables observados antes de 2020.\n",
+    "\n",
+    "En síntesis, el modelo ARIMA pinta un cuadro donde la inercia de las tendencias post-pandemia conduce a un estancamiento o deterioro en varios indicadores educativos clave, con la repitencia destacándose como la amenaza más inminente. Esto no es un pronóstico fatalista, sino una llamada de atención clara para las autoridades educativas y la sociedad sobre la necesidad de intervenir proactivamente para cambiar esta trayectoria proyectada."
    ]
   },
   {
